# denon-vibe

./: .gitignore  README.md  pyproject.toml
backend/: config.py  connection_manager.py  denon_avr.py  discovery.py  heos_client.py  heos_event_listener.py  main.py  models.py  ws.py
backend/routes/: avr.py  heos.py  system.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: BrowseItem.svelte  ConnectionStatus.svelte  Favorites.svelte  NowPlaying.svelte  PowerControl.svelte  RadioBrowser.svelte  SleepTimer.svelte  SourceSelect.svelte  Toast.svelte  VolumeControl.svelte
frontend/src/lib/: api.js  stores.js  toast.js  ws.js
