[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denon-vibe"
version = "0.1.0"
description = "Web controller for Denon AVR-1400H"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
denon-vibe = "backend.main:run"
